# kproc-macros

./: .woodpecker.yml  Cargo.toml  Makefile
.github/workflows/: mirroring.yml
docs/docs-book/: .gitignore  book.toml
docs/docs-book/src/: SUMMARY.md
kproc-examples/: Cargo.toml
kproc-examples/src/: main.rs
kproc-macros-examples/: Cargo.toml
kproc-macros-examples/src/: gen.rs  lib.rs
kproc-parser/: CHANGELOG.md  Cargo.toml  README.md  changelog.json
kproc-parser/src/: diagnostic.rs  kdiagnostic.rs  kparser.rs  kproc_macros.rs  lib.rs  macros.rs  rust.rs
kproc-parser/src/rust/: ast.rs  ast_nodes.rs  core.rs  errors.rs  fmt.rs  impl.rs  kattr.rs  kenum.rs  kfunc.rs  kimpl.rs  kparser.rs  kstruct.rs  ktrait.rs  rust_struct.rs  ty.rs
