[package]
name = "kproc-parser"
version = "0.0.1-alpla.6"
edition = "2021"
authors = ["Vincenzo Palazzo <vincenzopalazzodev@gmail.com>"]
description = "minimal procedural macros parser that produce a convenient AST"
readme = "README.md"
homepage = "https://codeberg.org/vincenzopalazzo/kproc-macros"
repository = "https://codeberg.org/vincenzopalazzo/kproc-macros.git"
license = "MIT"

[dependencies]
proc-macro2 = { version = "1.0.47", optional = true}

[features]
proc_macro_wrapper = ["dep:proc-macro2"]
